# geo-spector

./: Makefile  notes.txt  pyproject.toml  test.json
src/: cameras.cpp  cameras.hpp  main.cpp  usb.cpp  usb.hpp
stl-render/: README.md  main.py  pyproject.toml  render_stl_open3d.py
