[project]
name = "stl-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manifold3d>=3.4.1",
    "mapbox-earcut>=2.0.0",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "pillow>=12.2.0",
    "shapely>=2.1.2",
    "trimesh>=4.11.5",
]
